--- a/index.html
+++ b/index.html
@@ -1,1 +1,28 @@
-<h1>Welcome to the Random RPG Character Generator</h1>
+<html>
+
+<head>
+    <title>definitelyBenny's Random RPG Character Generator</title>
+    <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css”>
+    <script src=”https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js”></script>
+    <script src=”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js”></script>
+</head>
+
+<body>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-12">
+                <h1>definitelyBenny's Random RPG Character Generator</h1>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12">
+                <form action="index.php" method="post">
+                    <div class="form-group">
+                        <label for="name">Character Name:</label>
+                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Character Name">
+                    </div>
+                    <div class="form-group">
+                        <label for="
+</body>
+
+</html>
