--- a/index.html
+++ b/index.html
@@ -2,27 +2,21 @@
 
 <head>
     <title>definitelyBenny's Random RPG Character Generator</title>
-    <link rel=”stylesheet” href=”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css”>
-    <script src=”https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js”></script>
-    <script src=”https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js”></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </head>
 
 <body>
     <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-                <h1>definitelyBenny's Random RPG Character Generator</h1>
-            </div>
+        <div class="page-header">
+            <h1>definitelyBenny's Random RPG Character Generator</h1>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <form action="index.php" method="post">
-                    <div class="form-group">
-                        <label for="name">Character Name:</label>
-                        <input type="text" class="form-control" id="name" name="name" placeholder="Enter Character Name">
-                    </div>
-                    <div class="form-group">
-                        <label for="
+
+        <div class="col">
+            <h2>Click this button to generate a character!</h2>
+            <button type="button" class="btn btn-primary">Generate!</button>
+        </div>
+    </div>
 </body>
 
 </html>
