--- a/index.html
+++ b/index.html
@@ -21,6 +21,13 @@
             <h2>Click this button to generate a character!</h2>
             <button id="generateBtn" type="button" class="btn btn-primary">Generate!</button>
         </div>
+        <div class="col">
+            <h2 id="name"></h2>
+            <p id="age"></p>
+            <p id="gender"></p>
+            <p id="sex"></p>
+            <p id="job"></p>
+        </div>
     </div>
 </body>
 
