--- a/index.html
+++ b/index.html
@@ -8,8 +8,9 @@
     <script>
         $("#generateBtn").click( function () {
             alert("Generating Character...");
-        })
+        });
     </script>
+    <script type="text/javascript" src="/js/nameGenerator.js"></script>
 </head>
 
 <body>
